[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
select = [
    "A",    # flake8-builtins
    "I",    # isort 
    # "S",    # Bandit
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings


    "YTT",  # flake8-2020
    # "BLE",    # flake8-blind-except
    # "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    # "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    # "T20",  # flake8-print
    # "UP",   # pyupgrade
    "RSE",  # flake8-raise 
    "RET",  # flake8-return
    # "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    # "TRY",  # tryceratops 
    "RUF100"
]
ignore = [
    "A002", # Argument `x` is shadowing a python builtin
    "A003", # Class attribute `x` is shadowing a python builtin
]

[tool.ruff.isort]
known-third-party = ["creds", "gfpgan", "ray", "bridgeData", "nataili"]


[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_bridge"
version = "1.0.0"
authors = [
    { name="db0", email="mail@dbzer0.com" },
]
description = "Stable Horde Bridge"
readme = "README.md"
license = { file="LICENSE" }
dynamic = ["dependencies"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/db0/AI-Horde-Worker"
"Bug Tracker" = "https://github.com/db0/AI-Horde-Worker"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {}

[project.scripts]
horde_bridge = "bridge_stable_diffusion:main"
horde_bridge_interrogate = "bridge_interrogation:main"
horde_bridge_webui = "webui:main"
